--- a/Emo Quartet - semestralní práce/index.html
+++ b/Emo Quartet - semestralní práce/index.html
@@ -8,6 +8,6 @@
     <title>EMO Quartet</title>
 </head>
 <body>
-    <a href="./Fall Out Boy/"></a>
+    <a href="./Fall Out Boy/">fob</a>
 </body>
 </html>
