--- a/Emo Quartet - semestralní práce/Fall Out Boy/index.html
+++ b/Emo Quartet - semestralní práce/Fall Out Boy/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Emo Quartet - semestralní práce/style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <title>EMO Quartet</title>
+    <title>Fall Out Boy</title>
 </head>
 <body>
     
