--- a/Emo Quartet - semestralní práce/My Chemical Romance/index.html
+++ b/Emo Quartet - semestralní práce/My Chemical Romance/index.html
@@ -8,6 +8,20 @@
     <title>My Chemical Romance</title>
 </head>
 <body>
-    
+    <section class="tab1">
+        <h1>slide 1</h1>
+      </section>
+      <section>
+        <h1>slide 2</h1>
+      </section>
+      <section>
+        <h1>slide 3</h1>
+      </section>
+      <section>
+        <h1>slide 4</h1>
+      </section>
+      <section>
+        <h1>slide 5</h1>
+      </section>
 </body>
 </html>
