--- a/Emo Quartet - semestralní práce/My Chemical Romance/index.html
+++ b/Emo Quartet - semestralní práce/My Chemical Romance/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="... (integrity hash) ..." crossorigin="anonymous">
     <link rel="stylesheet" href="/Emo Quartet - semestralní práce/style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.png" type="image/x-icon">
     <title>My Chemical Romance</title>
 </head>
 <body>
