--- a/Emo Quartet - semestralní práce/My Chemical Romance/index.html
+++ b/Emo Quartet - semestralní práce/My Chemical Romance/index.html
@@ -10,13 +10,76 @@
 </head>
 <body>
     <section class="tab1">
-        <h1>slide 1</h1>
+      <header>
+        <div class="headerSoc">
+          <ul>
+              <li><a href="https://www.facebook.com/MyChemicalRomance/" target="_blank"><h1 id="fb"><i class="fab fa-facebook"></i></h1></a></li>
+              <li><a href="https://twitter.com/MCRofficial/" target="_blank"><h1 id="tw"><i class="fab fa-twitter"></i></h1></a></li>
+              <li><a href="https://www.instagram.com/mychemicalromance/" target="_blank"><h1 id="ig"><i class="fab fa-instagram"></i></h1></a></li>
+              <li><a href="https://www.youtube.com/user/mychemicalromance" target="_blank"><h1 id="yt"><i class="fab fa-youtube"></i></h1></a></li>
+              <li><a href="https://open.spotify.com/artist/7FBcuc1gsnv6Y1nwFtNRCb" target="_blank"><h1 id="sp"><i class="fab fa-spotify"></i></h1></a></li>
+          </ul>
+        </div>
+        <div class="headerLogo">
+          <ul>
+            <li style="display: inline-block;">
+              <div>
+                <img src="/Emo Quartet - semestralní práce/media/mcr-logo.png" style="width: 260px" alt="My Chemical Romance Logo">
+              </div>
+            </li style="display: inline-block;">
+            <li>
+              <div class="dropDown">
+                <label for="touch"><span class="idk">menu</span></label>
+                <input type="checkbox" id="touch">
+                <ul class="slide">
+                  <!-- Comment out the one you are on -->
+                  <li><img src="/Emo Quartet - semestralní práce/media/fob-logo.png" style="width: 260px"></li> 
+      <!--        <li><img src="/Emo Quartet - semestralní práce/media/mcr-logo.png" style="width: 260px"></li>--> 
+                  <li><img src="/Emo Quartet - semestralní práce/media/patd-logo.png" style="width: 260px"></li>
+                  <li><img src="/Emo Quartet - semestralní práce/media/top-logo.png" style="width: 260px"></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </header>
+      <main>
+        <div class="outNow">
+          <table>
+            <tbody>
+              <tr>
+                <td><img src="/Emo Quartet - semestralní práce/media/foundations-of-decay.png" alt="" class="album"></td>
+                <td>
+                  <!-- Album Description -->
+                  <div class="albumInfo">
+                    <h1 style="font-size: 50px;">"The Foundations<br>
+                    of decay"</h1>
+                    <hr width="50%" color="#FFF">
+                    <h3 style="font-size: 35px;">Out Now</h3>
+                    <ul style="padding: 0 0 0 0;">
+                        <li style="padding-bottom: 10px; font-size: 20px;"><a href="https://open.spotify.com/track/6Pif6RkFoYzLygdqktus4Q?si=f722a7031c404a60" target="_blank" class="fancyLink">Stream on Spotify</a></li>
+                        <li style="padding-bottom: 10px; font-size: 20px;"><a href="https://mcr.lnk.to/TFODVideo" target="_blank" class="fancyLink">Watch on YouTube</a></li>
+                        <li style="padding-bottom: 10px; font-size: 20px;"><a href="https://www.mychemicalromance.com" target="_blank" class="fancyLink">Official Website</a></li>
+                    </ul>
+                </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      </main>
       </section>
-      <section>
-        <h1>slide 2</h1>
+      <section class="tab2">
+        <div class="horizontalScroll">
+          <div><img src="/Emo Quartet - semestralní práce/media/bullets-cover.png" alt="" class="discographyAlbumCover" style="margin-left: 850px;"></div>
+          <div><img src="/Emo Quartet - semestralní práce/media/three-cheers-cover.png" alt="" class="discographyAlbumCover"></div>
+          <div><img src="/Emo Quartet - semestralní práce/media/black-parade-cover.png" alt="" class="discographyAlbumCover"></div>
+          <div><img src="/Emo Quartet - semestralní práce/media/danger-days.cover.png" alt="" class="discographyAlbumCover"></div>
+        </div>
       </section>
-      <section>
-        <h1>slide 3</h1>
+      <section class="tab3">
+        <div></div>
       </section>
 </body>
-</html>
+</html> 
