--- a/Emo Quartet - semestralní práce/My Chemical Romance/index.html
+++ b/Emo Quartet - semestralní práce/My Chemical Romance/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="... (integrity hash) ..." crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/Emo Quartet - semestralní práce/style.css">
     <link rel="icon" href="./favicon.png" type="image/x-icon">
     <title>My Chemical Romance</title>
@@ -24,17 +25,27 @@
           <ul>
             <li style="display: inline-block;">
               <div>
-                <img src="/Emo Quartet - semestralní práce/media/mcr-logo.png" style="width: 260px" alt="My Chemical Romance Logo">
+                <img src="/Emo Quartet - semestralní práce/media/mcr-logo.png" style="width: 260px;" alt="My Chemical Romance Logo">
               </div>
             </li style="display: inline-block;">
             <li>
               <div class="dropDown">
-                <label for="touch"><span class="idk">menu</span></label>
+                <label for="touch"><span class="idk">
+                  <div class="sbaricon">
+                    <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
+                    <lord-icon
+                        src="https://cdn.lordicon.com/wgwcqouc.json"
+                        trigger="morph"
+                        colors="primary:#FFFFFF,secondary:#08a88a"
+                        style="width:40px;height:40px">
+                    </lord-icon>
+                </div>
+                </span></label>
                 <input type="checkbox" id="touch">
                 <ul class="slide">
                   <!-- Comment out the one you are on -->
-                  <li><img src="/Emo Quartet - semestralní práce/media/fob-logo.png" style="width: 260px"></li> 
-      <!--        <li><img src="/Emo Quartet - semestralní práce/media/mcr-logo.png" style="width: 260px"></li>--> 
+                  <li><img src="/Emo Quartet - semestralní práce/media/fob-logo.png" style="width: 260px"></li>
+      <!--        <li><img src="/Emo Quartet - semestralní práce/media/mcr-logo.png" style="width: 260px"></li>-->
                   <li><img src="/Emo Quartet - semestralní práce/media/patd-logo.png" style="width: 260px"></li>
                   <li><img src="/Emo Quartet - semestralní práce/media/top-logo.png" style="width: 260px"></li>
                 </ul>
@@ -79,7 +90,13 @@
         </div>
       </section>
       <section class="tab3">
-        <div></div>
+        <div class="shadow">
+          <p class="text">
+            My Chemical Romance is the greatest post-hardcore rock band ever. <br>
+            <br>
+            My Chemical Romance emerged in the early 2000s as a powerful force in alternative music. Hailing from New Jersey, the band—comprising Gerard Way, Ray Toro, Frank Iero, and Mikey Way—crafted a unique blend of punk and emo influences. Their breakthrough albums "Three Cheers for Sweet Revenge" and "The Black Parade" catapulted them to fame, known for emotionally charged lyrics and theatrical performances. After a hiatus, they reunited in 2019 to the delight of their devoted fanbase, showcasing the lasting impact of their music and message of resilience and individuality.
+          </p>
+        </div>
       </section>
 </body>
 </html> 
