--- a/Emo Quartet - semestralní práce/My Chemical Romance/index.html
+++ b/Emo Quartet - semestralní práce/My Chemical Romance/index.html
@@ -30,8 +30,8 @@
             </li style="display: inline-block;">
             <li>
               <div class="dropDown">
-                <label for="touch"><span class="idk">
-                  <div class="sbaricon">
+                <label for="touch">
+                  <span>
                     <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
                     <lord-icon
                         src="https://cdn.lordicon.com/wgwcqouc.json"
@@ -39,13 +39,13 @@
                         colors="primary:#FFFFFF,secondary:#08a88a"
                         style="width:40px;height:40px">
                     </lord-icon>
-                </div>
-                </span></label>
+                  </span>
+                </label>
                 <input type="checkbox" id="touch">
                 <ul class="slide">
                   <!-- Comment out the one you are on -->
                   <li><img src="/Emo Quartet - semestralní práce/media/fob-logo.png" style="width: 260px"></li>
-      <!--        <li><img src="/Emo Quartet - semestralní práce/media/mcr-logo.png" style="width: 260px"></li>-->
+<!--              <li><img src="/Emo Quartet - semestralní práce/media/mcr-logo.png" style="width: 260px"></li>-->
                   <li><img src="/Emo Quartet - semestralní práce/media/patd-logo.png" style="width: 260px"></li>
                   <li><img src="/Emo Quartet - semestralní práce/media/top-logo.png" style="width: 260px"></li>
                 </ul>
@@ -54,7 +54,7 @@
           </ul>
         </div>
       </header>
-      <main>
+      <div class="main">
         <div class="outNow">
           <table>
             <tbody>
@@ -79,7 +79,7 @@
           </table>
         </div>
       </div>
-      </main>
+    </div>
       </section>
       <section class="tab2">
         <div class="horizontalScroll">
