--- a/github.html
+++ b/github.html
@@ -3,6 +3,6 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="refresh" content="0; url=protivinskyvojtech.github.io/Emo-Quartet" />
+   <meta http-equiv="refresh" content="0; url=https://protivinskyvojtech.github.io/Emo-Quartet" />
  </head>
 </html>
