--- a/Emo-Quartet/Fall-Out-Boy/index.html
+++ b/Emo-Quartet/Fall-Out-Boy/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="icon" href="./favicon.png" type="image/x-icon">
   <title>Fall Out Boy</title>
 </head>
 <body>
-  <section class="tab1" style="background-image: url(/media/fob-bg.png);">
+  <section class="tab1" style="background-image: url(../media/fob-bg.png);">
     <header>
       <div class="headerSoc">
         <ul>
@@ -25,7 +25,7 @@
         <ul>
           <li style="display: inline-block;">
             <div>
-              <img src="/media/fob-logo.png" style="height: 60px;" alt="My Chemical Romance Logo">
+              <img src="../media/fob-logo.png" style="height: 60px;" alt="My Chemical Romance Logo">
             </div>
           </li>
           <li>
@@ -45,10 +45,10 @@
               <ul class="slide">
                 <!-- Comment out the one you are on -->
                 <li><a href="/" style="text-decoration: none;"><h1 class="homeButton"><i class="fas fa-home" style="padding-right: 10px;"></i>Home</h1></a></li>
-<!--            <li><a href="/Fall-Out-Boy"><img src="/media/fob-logo.png" alt="" style="width: 260px"></a></li>-->
-                <li><a href="/My-Chemical-Romance"><img src="/media/mcr-logo.png" alt="" style="width: 260px"></a></li>
-                <li><a href="/Panic!-At-The-Disco"><img src="/media/patd-logo.png" alt="" style="width: 260px"></a></li>
-                <li><a href="/Twenty-One-Pilots"><img src="/media/top-logo.png" alt="" style="width: 260px"></a></li>
+<!--            <li><a href="../Fall-Out-Boy"><img src="../media/fob-logo.png" alt="" style="width: 260px"></a></li>-->
+                <li><a href="../My-Chemical-Romance"><img src="../media/mcr-logo.png" alt="" style="width: 260px"></a></li>
+                <li><a href="../Panic!-At-The-Disco"><img src="../media/patd-logo.png" alt="" style="width: 260px"></a></li>
+                <li><a href="../Twenty-One-Pilots"><img src="../media/top-logo.png" alt="" style="width: 260px"></a></li>
               </ul>
             </div>
           </li>
@@ -60,7 +60,7 @@
         <table>
           <tbody>
             <tr>
-              <td><img src="/media/so-much-for-stardust.png" alt="" class="album"></td>
+              <td><img src="../media/so-much-for-stardust.png" alt="" class="album"></td>
               <td>
                 <!-- Album Description -->
                 <div class="albumInfo">
@@ -83,17 +83,17 @@
   <section class="tab2">
     <!-- Discography -->
     <div class="horizontalScroll">
-      <div style="margin-left: 50px;"><img src="/media/take-this-to-your-grave-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/under-the-cork-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/infinity-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/folie-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/save-rock-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/american-beauty-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/mania-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/so-much-for-stardust.png" alt="" class="discographyAlbumCover"></div>
+      <div style="margin-left: 50px;"><img src="../media/take-this-to-your-grave-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/under-the-cork-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/infinity-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/folie-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/save-rock-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/american-beauty-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/mania-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/so-much-for-stardust.png" alt="" class="discographyAlbumCover"></div>
     </div>
   </section>
-  <section class="tab3" style="background-image: url(/media/fob-band.png);">
+  <section class="tab3" style="background-image: url(../media/fob-band.png);">
     <div class="shadow">
       <div class="text">
         <h1>Fall Out Boy</h1>
@@ -102,7 +102,7 @@
       </div>
     </div>
   </section>
-  <section class="tab3" style="background-image: url(/media/fob-band2.png); background-position: right;">
+  <section class="tab3" style="background-image: url(../media/fob-band2.png); background-position: right;">
     <div class="info" style="background: linear-gradient(to right,#000 30%,#00000000 100%) !important;">
       <div class="text1">
         <p>With subsequent releases like "Infinity on High" (2007) and "Folie à Deux" (2008), the band continued to push musical boundaries. Experimenting with different styles and incorporating diverse influences, they maintained their signature sound while exploring new sonic territories. Tracks like "This Ain't a Scene, It's an Arms Race" and "I Don't Care" demonstrated their versatility and penchant for crafting infectious pop-rock anthems.</p>
