--- a/Emo-Quartet/Panic!-At-The-Disco/index.html
+++ b/Emo-Quartet/Panic!-At-The-Disco/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="icon" href="./favicon.png" type="image/x-icon">
   <title>Panic! at the Disco</title>
 </head>
 <body>
-  <section class="tab1" style="background-image: url(/media/patd-bg.png);">
+  <section class="tab1" style="background-image: url(../media/patd-bg.png);">
     <header>
       <div class="headerSoc">
         <ul>
@@ -25,7 +25,7 @@
         <ul>
           <li style="display: inline-block;">
             <div>
-              <img src="/media/patd-logo.png" style="height: 60px;" alt="My Chemical Romance Logo">
+              <img src="../media/patd-logo.png" style="height: 60px;" alt="My Chemical Romance Logo">
             </div>
           </li>
           <li>
@@ -45,10 +45,10 @@
               <ul class="slide">
                 <!-- Comment out the one you are on -->
                 <li><a href="/" style="text-decoration: none;"><h1 class="homeButton"><i class="fas fa-home" style="padding-right: 10px;"></i>Home</h1></a></li>
-                <li><a href="/Fall-Out-Boy"><img src="/media/fob-logo.png" alt="" style="width: 260px"></a></li>
-                <li><a href="/My-Chemical-Romance"><img src="/media/mcr-logo.png" alt="" style="width: 260px"></a></li>
-<!--            <li><a href="/Panic!-At-The-Disco"><img src="/media/patd-logo.png" alt="" style="width: 260px"></a></li>-->
-                <li><a href="/Twenty-One-Pilots"><img src="/media/top-logo.png" alt="" style="width: 260px"></a></li>
+                <li><a href="../Fall-Out-Boy"><img src="../media/fob-logo.png" alt="" style="width: 260px"></a></li>
+                <li><a href="../My-Chemical-Romance"><img src="../media/mcr-logo.png" alt="" style="width: 260px"></a></li>
+<!--            <li><a href="../Panic!-At-The-Disco"><img src="../media/patd-logo.png" alt="" style="width: 260px"></a></li>-->
+                <li><a href="../Twenty-One-Pilots"><img src="../media/top-logo.png" alt="" style="width: 260px"></a></li>
               </ul>
             </div>
           </li>
@@ -60,7 +60,7 @@
         <table>
           <tbody>
             <tr>
-              <td><img src="/media/viva-cover.png" alt="" class="album"></td>
+              <td><img src="../media/viva-cover.png" alt="" class="album"></td>
               <td>
                 <!-- Album Description -->
                 <div class="albumInfo">
@@ -82,16 +82,16 @@
   </section>
   <section class="tab2">
     <div class="horizontalScroll">
-      <div style="margin-left: 50px;"><img src="/media/fever-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/pretty-odd-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/vices-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/too-weird-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/bachelor-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/pray-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/viva-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div style="margin-left: 50px;"><img src="../media/fever-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/pretty-odd-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/vices-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/too-weird-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/bachelor-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/pray-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/viva-cover.png" alt="" class="discographyAlbumCover"></div>
     </div>
   </section>
-  <section class="tab3" style="background-image: url(/media/patd-band.png);">
+  <section class="tab3" style="background-image: url(../media/patd-band.png);">
     <div class="shadow">
       <div class="text">
         <h1>Panic! at the Disco</h1>
@@ -102,7 +102,7 @@
       </div>
     </div>
   </section>
-  <section class="tab3" style="background-image: url(/media/patd-band2.png); background-position: right;">
+  <section class="tab3" style="background-image: url(../media/patd-band2.png); background-position: right;">
     <div class="info" style="background: linear-gradient(to right,#000 45%,#00000000 100%) !important;">
       <div class="text1">
         <p>Renowned for their elaborate live performances, Panic! at the Disco embraced grandeur, adding a visual spectacle to their energetic shows, solidifying their reputation as theatrical trailblazers.</p>
