--- a/Emo-Quartet/Twenty-One-Pilots/index.html
+++ b/Emo-Quartet/Twenty-One-Pilots/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <title>Twenty One Pilots</title>
 </head>
 <body>
-  <section class="tab1" style="background-image: url(/media/top-bg.png);">
+  <section class="tab1" style="background-image: url(../media/top-bg.png);">
     <header>
       <div class="headerSoc">
         <ul>
@@ -25,7 +25,7 @@
         <ul>
           <li style="display: inline-block;">
             <div>
-              <img src="/media/top-logo.png" style="height: 60px;" alt="My Chemical Romance Logo">
+              <img src="../media/top-logo.png" style="height: 60px;" alt="My Chemical Romance Logo">
             </div>
           </li>
           <li>
@@ -45,10 +45,10 @@
               <ul class="slide">
                 <!-- Comment out the one you are on -->
                 <li><a href="/" style="text-decoration: none;"><h1 class="homeButton"><i class="fas fa-home" style="padding-right: 10px;"></i>Home</h1></a></li>
-                <li><a href="/Fall-Out-Boy"><img src="/media/fob-logo.png" alt="" style="width: 260px"></a></li>
-                <li><a href="/My-Chemical-Romance"><img src="/media/mcr-logo.png" alt="" style="width: 260px"></a></li>
-                <li><a href="/Panic!-At-The-Disco"><img src="/media/patd-logo.png" alt="" style="width: 260px"></a></li>
-<!--            <li><a href="/Twenty-One-Pilots"><img src="/media/top-logo.png" alt="" style="width: 260px"></a></li> -->
+                <li><a href="../Fall-Out-Boy"><img src="../media/fob-logo.png" alt="" style="width: 260px"></a></li>
+                <li><a href="../My-Chemical-Romance"><img src="../media/mcr-logo.png" alt="" style="width: 260px"></a></li>
+                <li><a href="../Panic!-At-The-Disco"><img src="../media/patd-logo.png" alt="" style="width: 260px"></a></li>
+<!--            <li><a href="../Twenty-One-Pilots"><img src="../media/top-logo.png" alt="" style="width: 260px"></a></li> -->
               </ul>
             </div>
           </li>
@@ -60,7 +60,7 @@
         <table>
           <tbody>
             <tr>
-              <td><img src="/media/scaled-and-icy-cover.png" alt="" class="album"></td>
+              <td><img src="../media/scaled-and-icy-cover.png" alt="" class="album"></td>
               <td>
                 <!-- Album Description -->
                 <div class="albumInfo">
@@ -82,14 +82,14 @@
   </section>
   <section class="tab2">
     <div class="horizontalScroll">
-      <div style="margin-left: 50px;"><img src="/media/self-titled-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/vessel-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/blurryface-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/trench-cover.png" alt="" class="discographyAlbumCover"></div>
-      <div><img src="/media/scaled-and-icy-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div style="margin-left: 50px;"><img src="../media/self-titled-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/vessel-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/blurryface-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/trench-cover.png" alt="" class="discographyAlbumCover"></div>
+      <div><img src="../media/scaled-and-icy-cover.png" alt="" class="discographyAlbumCover"></div>
     </div>
   </section>
-  <section class="tab3" style="background-image: url(/media/top-band.png);">
+  <section class="tab3" style="background-image: url(../media/top-band.png);">
     <div class="shadow">
       <div class="text">
         <h1>Twenty One Pilots</h1>
