--- a/Emo-Quartet/index.html
+++ b/Emo-Quartet/index.html
@@ -16,7 +16,7 @@
       <ul>
         <li style="display: inline-block;">
           <div>
-            <img src="/media/pop-punk.png" style="height: 60px;" alt="My Chemical Romance Logo">
+            <img src="media/pop-punk.png" style="height: 60px;" alt="My Chemical Romance Logo">
           </div>
         </li>
         <li>
@@ -34,10 +34,10 @@
             </label>
             <input type="checkbox" id="touch">
             <ul class="slide">
-              <li><a href="/Fall-Out-Boy"><img src="/media/fob-logo.png" alt="" style="height: 60px;"></a></li>
-              <li><a href="/My-Chemical-Romance"><img src="/media/mcr-logo.png" alt="" style="height: 60px;"></a></li>
-              <li><a href="/Panic!-At-The-Disco"><img src="/media/patd-logo.png" alt="" style="height: 60px;"></a></li>
-              <li><a href="/Twenty-One-Pilots"><img src="/media/top-logo.png" alt="" style="height: 60px;"></a></li>
+              <li><a href="Fall-Out-Boy"><img src="media/fob-logo.png" alt="" style="height: 60px;"></a></li>
+              <li><a href="My-Chemical-Romance"><img src="media/mcr-logo.png" alt="" style="height: 60px;"></a></li>
+              <li><a href="Panic!-At-The-Disco"><img src="media/patd-logo.png" alt="" style="height: 60px;"></a></li>
+              <li><a href="Twenty-One-Pilots"><img src="media/top-logo.png" alt="" style="height: 60px;"></a></li>
             </ul>
           </div>
         </li>
@@ -45,7 +45,7 @@
     </div>
   </header>
   <main>
-    <div class="info" style="background-image: url(/media/band.png);">
+    <div class="info" style="background-image: url(media/band.png);">
       <!-- Emo Music -->
       <div class="info" style="background: linear-gradient(to left,#000 45%,#00000000 100%) !important;">
         <div class="text">
