--- a/Emo-Quartet/My-Chemical-Romance/index.html
+++ b/Emo-Quartet/My-Chemical-Romance/index.html
@@ -88,7 +88,7 @@
       <div><img src="../media/danger-days.cover.png" alt="" class="discographyAlbumCover"></div>
     </div>
   </section>
-  <section class="tab3" style="background-image: url(../media/mcr-band.png); background-position: right;">
+  <section class="tab3" style="background-image: url(../media/mcr-band.png);">
     <div class="shadow">
       <div class="text">
         <h1>My Chemical Romance</h1>
