--- a/Emo-Quartet/Twenty-One-Pilots/index.html
+++ b/Emo-Quartet/Twenty-One-Pilots/index.html
@@ -44,7 +44,7 @@
               <input type="checkbox" id="touch">
               <ul class="slide">
                 <!-- Comment out the one you are on -->
-                <li><a href="../Emo-Quartet/" style="text-decoration: none;"><h1 class="homeButton"><i class="fas fa-home" style="padding-right: 10px;"></i>Home</h1></a></li>
+                <li><a href="/Emo-Quartet/" style="text-decoration: none;"><h1 class="homeButton"><i class="fas fa-home" style="padding-right: 10px;"></i>Home</h1></a></li>
                 <li><a href="../Fall-Out-Boy"><img src="../media/fob-logo.png" alt="" style="width: 260px"></a></li>
                 <li><a href="../My-Chemical-Romance"><img src="../media/mcr-logo.png" alt="" style="width: 260px"></a></li>
                 <li><a href="../Panic!-At-The-Disco"><img src="../media/patd-logo.png" alt="" style="width: 260px"></a></li>
