--- a/Emo-Quartet/index.html
+++ b/Emo-Quartet/index.html
@@ -34,10 +34,10 @@
             </label>
             <input type="checkbox" id="touch">
             <ul class="slide">
-              <li><a href="Fall-Out-Boy"><img src="media/fob-logo.png" alt="" style="height: 60px;"></a></li>
-              <li><a href="My-Chemical-Romance"><img src="media/mcr-logo.png" alt="" style="height: 60px;"></a></li>
-              <li><a href="Panic!-At-The-Disco"><img src="media/patd-logo.png" alt="" style="height: 60px;"></a></li>
-              <li><a href="Twenty-One-Pilots"><img src="media/top-logo.png" alt="" style="height: 60px;"></a></li>
+              <li><a href="Fall-Out-Boy"><img src="media/fob-logo.png" alt="" style="width: 260px;"></a></li>
+              <li><a href="My-Chemical-Romance"><img src="media/mcr-logo.png" alt="" style="width: 260px;"></a></li>
+              <li><a href="Panic!-At-The-Disco"><img src="media/patd-logo.png" alt="" style="width: 260px;"></a></li>
+              <li><a href="Twenty-One-Pilots"><img src="media/top-logo.png" alt="" style="width: 260px;"></a></li>
             </ul>
           </div>
         </li>
